# eighty-points

./: .gitignore  CLAUDE.md  CURRENT_STATE.md  IMPLEMENTATION_PLAN.md  JEFF_TESTING.md  PROGRESS.md  README.md  pyproject.toml
frontend/: app.js  index.html
scripts/: dev_mobile.sh  play_cli.py  replay_log.py
src/shengji/engine/: engine.py  logger.py  scoring.py  tricks.py
src/shengji/models/: bid.py  card.py  deck.py  friend_declaration.py  game_state.py  groups.py  player.py  trump.py
src/shengji/modes/: base.py  find_friends.py  upgrade.py
src/shengji/network/: app.py  handler.py  room.py
src/shengji/superuser/: api.py  inspector.py  mutator.py
tests/test_engine/: test_bidding.py  test_bottom_exchange.py  test_dealing.py  test_game_loop.py  test_scoring.py  test_throw_penalty.py  test_tricks.py
tests/test_integration/: helpers.py  test_bidding_and_bottom.py  test_find_friends_flow.py  test_formats_and_ordering.py  test_malformed_and_full_round.py  test_scoring_rounds.py  test_throws.py  test_trump_identity_flow.py
tests/test_models/: test_card.py  test_deck.py  test_game_state.py  test_groups.py  test_player.py  test_trump.py
tests/test_modes/: test_find_friends.py  test_upgrade.py
tests/test_network/: test_app.py  test_check_play.py  test_room.py  test_websocket.py
tests/test_superuser/: test_api.py  test_inspector.py  test_mutator.py
